# funnel

./: .dir-locals.el  .gitignore  Cargo.toml  README.md  README.org  clippy.toml  funnel.el  pants.ini  pants.toml  rustfmt.toml  why
argparse/: README.md  generate-password.why  parse-args.zsh
cli/: Makefile  README.md  README.org  cli.fun  cli.lisp  cli.xml  output.lisp  reader-macros.lisp
codegen/: README.md
io/: Cargo.toml  parsers.why
io/src/: dir.rs  lib.rs  merge.rs  split.rs
io/src/merge/: dir.rs  file.rs  path.rs
io/src/split/: file.rs  pipe.rs
language/: BUILD  Cargo.toml  Parser.scala  ParserSpec.scala  README.md  README.org  funnel.fun  new-file.fun  new-stuff.fun  playground.fun  test.sh
language/src/: lib.rs
toolchain/: README.md
