[workspace]
members                 = [
  "./io",
  # "./language",
]
default-members         = [
  "./io",
  # "./language",
]
resolver                = "2"

[workspace.package]
version                 = "0.0.0"
edition                 = "2021"
authors                 = ["Danny McClanahan <dmcC2@hypnicjerk.ai>"]
license                 = "GPL-3.0"

keywords                = []
categories              = []
homepage                = "https://github.com/cosmicexplorer/funnel"
repository              = "https://github.com/cosmicexplorer/funnel"

[workspace.dependencies]
displaydoc              = "0.2.5"
indexmap                = "2.5"
parking_lot             = "0.12.3"
tempfile                = "3.12"
thiserror               = "1.0.63"

[profile.release]
strip                   = true
lto                     = true

[workspace.lints.clippy]
len_without_is_empty    = "allow"
redundant_field_names   = "allow"
too_many_arguments      = "allow"
single_component_path_imports = "allow"
module_inception        = "allow"
match_ref_pats          = "allow"
expl_impl_clone_on_copy = "deny"
if_not_else             = "deny"
needless_continue       = "deny"
separated_literal_suffix = "deny"
unseparated_literal_suffix = "allow"
used_underscore_binding = "deny"
collapsible_else_if     = "allow"
result_large_err        = "allow"
missing_transmute_annotations = "allow"
