[package]
name                    = "funnel-io"
version.workspace       = true
edition.workspace       = true
authors.workspace       = true
license.workspace       = true

keywords                = []
categories              = []
homepage.workspace      = true
repository.workspace    = true

[dependencies]
displaydoc.workspace    = true
indexmap.workspace      = true
parking_lot.workspace   = true
thiserror.workspace     = true

[dev-dependencies]
tempfile.workspace      = true

[package.metadata.docs.rs]
all-features            = true
rustdoc-args            = ["--cfg", "docsrs"]

[lints]
workspace               = true
