[package]
name                    = "funnel-lang"
version.workspace       = true
edition.workspace       = true
authors.workspace       = true
license.workspace       = true

keywords.workspace      = true
categories.workspace    = true
homepage.workspace      = true
repository.workspace    = true

[dependencies]
ariadne                 = "0.3"
# chumsky                 = { version = "1.0.0-alpha.4", features = ["regex"] }
chumsky                 = { git = "https://github.com/cosmicexplorer/chumsky", rev = "e7ad6208491f48696fe48e4d36c13b77bc6403ed", features = ["regex"] }
# chumsky                 = { path = "/home/cosmicexplorer/tools/chumsky", features = ["regex"] }
displaydoc.workspace    = true
thiserror.workspace     = true
